feat: #147 - test fails

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -15,7 +15,7 @@ depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool
 
 [contracts.collateral-rebalancing-pool]
 path = "contracts/collateral-rebalancing-pool.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "open-oracle", "fixed-weight-pool"]
+depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "open-oracle", "fixed-weight-pool","yield-token-pool"]
 
 [contracts.fixed-weight-pool]
 path = "contracts/fixed-weight-pool.clar"
@@ -56,6 +56,10 @@ depends_on = ["trait-sip-010", "trait-pool-token"]
 [contracts.pool-token-usda-ayusda]
 path = "contracts/pool-token-usda-ayusda.clar"
 depends_on = ["trait-sip-010", "trait-pool-token"]
+
+[contracts.pool-token-yield-usda-4380-usda]
+path = "contracts/pool-token-yield-usda-4380-usda.clar"
+depends_on = []
 
 [contracts.pool-token-yield-usda-wbtc]
 path = "contracts/pool-token-yield-usda-wbtc.clar"
