--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -129,3 +129,7 @@ depends_on = ["ytp-yield-wbtc-59760-wbtc", "trait-yield-token", "trait-sip-010",
 [contracts.multisig-ytp-yield-wbtc-79760-wbtc]
 path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
 depends_on = ["ytp-yield-wbtc-79760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-79760"]
+
+[contracts.multisig-crp-wbtc-59760-usda]
+path = "contracts/multisig/multisig-crp-wbtc-59760-usda.clar"
+depends_on = ["yield-wbtc-59760", "key-wbtc-59760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
