--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -2,6 +2,10 @@
 name = "alex-v1"
 requirements = []
 
+[contracts.trait-ownable]
+path = "contracts/traits/trait-ownable.clar"
+depends_on = []
+
 [contracts.trait-flash-loan-user]
 path = "contracts/traits/trait-flash-loan-user.clar"
 depends_on = []
@@ -48,51 +52,51 @@ depends_on = ["math-fixed-point"]
 
 [contracts.token-alex]
 path = "contracts/token/token-alex.clar"
-depends_on = ["trait-pool-token"]
+depends_on = ["trait-pool-token", "trait-ownable"]
 
 [contracts.token-usda]
 path = "contracts/token/token-usda.clar"
-depends_on = ["trait-pool-token"]
+depends_on = ["trait-pool-token", "trait-ownable"]
 
 [contracts.token-wbtc]
 path = "contracts/token/token-wbtc.clar"
-depends_on = ["trait-pool-token"]
+depends_on = ["trait-pool-token", "trait-ownable"]
 
 [contracts.yield-wbtc-59760]
 path = "contracts/yield-token/yield-wbtc-59760.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc"]
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
 
 [contracts.yield-wbtc-79760]
 path = "contracts/yield-token/yield-wbtc-79760.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc"]
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
 
 [contracts.ytp-yield-wbtc-59760-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc-59760-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-pool-token"]
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 
 [contracts.ytp-yield-wbtc-79760-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc-79760-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-pool-token"]
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 
 [contracts.fwp-wbtc-usda-50-50]
 path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
-depends_on = ["trait-sip-010", "trait-pool-token"]
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 
 [contracts.key-wbtc-59760-usda]
 path = "contracts/key-token/key-wbtc-59760-usda.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc"]
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
 
 [contracts.key-wbtc-79760-usda]
 path = "contracts/key-token/key-wbtc-79760-usda.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc"]
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
 
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
-depends_on = ["token-alex", "token-usda", "open-oracle", "math-fixed-point"]
+depends_on = ["token-alex", "token-usda", "open-oracle", "math-fixed-point", "trait-ownable"]
 
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
-depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point"]
+depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point", "trait-ownable"]
 
 [contracts.open-oracle]
 path = "contracts/open-oracle.clar"
