--- a/init-js-tool/package.json
+++ b/init-js-tool/package.json
@@ -14,6 +14,7 @@
     "bn.js": "^5.2.0",
     "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
+    "readline-promise": "^1.0.5",
     "walk-sync": "^3.0.0"
   },
   "resolutions": {
