generate new yield key and pool contracts

--- a/init-js-tool/package.json
+++ b/init-js-tool/package.json
@@ -14,7 +14,8 @@
     "bn.js": "^5.2.0",
     "coingecko-api": "^1.0.10",
     "dotenv": "^10.0.0",
-    "readline-promise": "^1.0.5"
+    "readline-promise": "^1.0.5",
+    "replace-in-file": "^6.2.0"
   },
   "resolutions": {
     "smart-buffer": "npm:@syvita/smart-buffer@4.2.0"
