--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,10 +1,93 @@
 [project]
 name = "alex-v1"
 requirements = []
+[contracts.alex-reserve-pool]
+path = "contracts/pool/alex-reserve-pool.clar"
+depends_on = ["token-alex", "token-usda", "open-oracle", "math-fixed-point", "trait-ownable"]
 
-[contracts.trait-ownable]
-path = "contracts/traits/trait-ownable.clar"
+[contracts.alex-vault]
+path = "contracts/alex-vault.clar"
+depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point", "trait-ownable"]
+
+[contracts.collateral-rebalancing-pool]
+path = "contracts/pool/collateral-rebalancing-pool.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "open-oracle", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
+
+[contracts.fixed-weight-pool]
+path = "contracts/pool/fixed-weight-pool.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "open-oracle", "alex-reserve-pool", "token-usda", "trait-multisig-vote"]
+
+[contracts.flash-loan-user-margin-usda-wbtc-59760]
+path = "contracts/flash-loan-user-margin-usda-wbtc-59760.clar"
+depends_on = ["token-usda", "token-wbtc", "yield-wbtc-59760", "key-wbtc-59760-usda"]
+
+[contracts.fwp-wbtc-usda-50-50]
+path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.key-wbtc-59760-usda]
+path = "contracts/key-token/key-wbtc-59760-usda.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.key-wbtc-79760-usda]
+path = "contracts/key-token/key-wbtc-79760-usda.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.liquidity-bootstrapping-pool]
+path = "contracts/pool/liquidity-bootstrapping-pool.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "open-oracle", "alex-reserve-pool", "token-usda", "fixed-weight-pool", "trait-multisig-vote"]
+
+[contracts.math-fixed-point]
+path = "contracts/lib/math-fixed-point.clar"
+depends_on = ["math-log-exp"]
+
+[contracts.math-log-exp]
+path = "contracts/lib/math-log-exp.clar"
 depends_on = []
+
+[contracts.math-new-lib]
+path = "contracts/new-lib/math-new-lib.clar"
+depends_on = ["math-new-log-exp"]
+
+[contracts.math-new-log-exp]
+path = "contracts/new-lib/math-new-log-exp.clar"
+depends_on = []
+
+[contracts.multisig-crp-wbtc-59760-usda]
+path = "contracts/multisig/multisig-crp-wbtc-59760-usda.clar"
+depends_on = ["yield-wbtc-59760", "key-wbtc-59760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
+
+[contracts.multisig-crp-wbtc-79760-usda]
+path = "contracts/multisig/multisig-crp-wbtc-79760-usda.clar"
+depends_on = ["yield-wbtc-79760", "key-wbtc-79760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
+
+[contracts.multisig-fwp-wbtc-usda-50-50]
+path = "contracts/multisig/multisig-fwp-wbtc-usda-50-50.clar"
+depends_on = []
+
+[contracts.multisig-ytp-yield-wbtc-59760-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
+depends_on = ["ytp-yield-wbtc-59760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-59760"]
+
+[contracts.multisig-ytp-yield-wbtc-79760-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
+depends_on = ["ytp-yield-wbtc-79760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-79760"]
+
+[contracts.open-oracle]
+path = "contracts/open-oracle.clar"
+depends_on = ["trait-yield-token", "trait-oracle", "trait-sip-010"]
+
+[contracts.token-alex]
+path = "contracts/token/token-alex.clar"
+depends_on = ["trait-pool-token", "trait-ownable"]
+
+[contracts.token-usda]
+path = "contracts/token/token-usda.clar"
+depends_on = ["trait-pool-token", "trait-ownable"]
+
+[contracts.token-wbtc]
+path = "contracts/token/token-wbtc.clar"
+depends_on = ["trait-pool-token", "trait-ownable"]
 
 [contracts.trait-flash-loan-user]
 path = "contracts/traits/trait-flash-loan-user.clar"
@@ -16,6 +99,10 @@ depends_on = ["trait-sip-010"]
 
 [contracts.trait-oracle]
 path = "contracts/traits/trait-oracle.clar"
+depends_on = []
+
+[contracts.trait-ownable]
+path = "contracts/traits/trait-ownable.clar"
 depends_on = []
 
 [contracts.trait-pool-token]
@@ -34,14 +121,6 @@ depends_on = ["trait-sip-010", "trait-flash-loan-user"]
 path = "contracts/traits/trait-yield-token.clar"
 depends_on = []
 
-[contracts.math-fixed-point]
-path = "contracts/lib/math-fixed-point.clar"
-depends_on = ["math-log-exp"]
-
-[contracts.math-log-exp]
-path = "contracts/lib/math-log-exp.clar"
-depends_on = []
-
 [contracts.weighted-equation]
 path = "contracts/equations/weighted-equation.clar"
 depends_on = ["math-fixed-point"]
@@ -50,17 +129,9 @@ depends_on = ["math-fixed-point"]
 path = "contracts/equations/yield-token-equation.clar"
 depends_on = ["math-fixed-point"]
 
-[contracts.token-alex]
-path = "contracts/token/token-alex.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
-
-[contracts.token-usda]
-path = "contracts/token/token-usda.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
-
-[contracts.token-wbtc]
-path = "contracts/token/token-wbtc.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
+[contracts.yield-token-pool]
+path = "contracts/pool/yield-token-pool.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token", "open-oracle", "token-alex", "token-usda", "fixed-weight-pool", "alex-reserve-pool", "trait-multisig-vote"]
 
 [contracts.yield-wbtc-59760]
 path = "contracts/yield-token/yield-wbtc-59760.clar"
@@ -77,67 +148,3 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 [contracts.ytp-yield-wbtc-79760-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc-79760-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
-
-[contracts.fwp-wbtc-usda-50-50]
-path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
-
-[contracts.key-wbtc-59760-usda]
-path = "contracts/key-token/key-wbtc-59760-usda.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
-
-[contracts.key-wbtc-79760-usda]
-path = "contracts/key-token/key-wbtc-79760-usda.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
-
-[contracts.alex-reserve-pool]
-path = "contracts/pool/alex-reserve-pool.clar"
-depends_on = ["token-alex", "token-usda", "open-oracle", "math-fixed-point", "trait-ownable"]
-
-[contracts.alex-vault]
-path = "contracts/alex-vault.clar"
-depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point", "trait-ownable"]
-
-[contracts.open-oracle]
-path = "contracts/open-oracle.clar"
-depends_on = ["trait-yield-token", "trait-oracle", "trait-sip-010"]
-
-[contracts.fixed-weight-pool]
-path = "contracts/pool/fixed-weight-pool.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "open-oracle", "alex-reserve-pool", "token-usda", "trait-multisig-vote"]
-
-[contracts.yield-token-pool]
-path = "contracts/pool/yield-token-pool.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token", "open-oracle", "token-alex", "token-usda", "fixed-weight-pool", "alex-reserve-pool", "trait-multisig-vote"]
-
-[contracts.collateral-rebalancing-pool]
-path = "contracts/pool/collateral-rebalancing-pool.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "open-oracle", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
-
-[contracts.liquidity-bootstrapping-pool]
-path = "contracts/pool/liquidity-bootstrapping-pool.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "open-oracle", "alex-reserve-pool", "token-usda", "fixed-weight-pool", "trait-multisig-vote"]
-
-[contracts.flash-loan-user-margin-usda-wbtc-59760]
-path = "contracts/flash-loan-user-margin-usda-wbtc-59760.clar"
-depends_on = ["token-usda", "token-wbtc", "yield-wbtc-59760", "key-wbtc-59760-usda"]
-
-[contracts.multisig-fwp-wbtc-usda-50-50]
-path = "contracts/multisig/multisig-fwp-wbtc-usda-50-50.clar"
-depends_on = []
-
-[contracts.multisig-ytp-yield-wbtc-59760-wbtc]
-path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
-depends_on = ["ytp-yield-wbtc-59760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-59760"]
-
-[contracts.multisig-ytp-yield-wbtc-79760-wbtc]
-path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
-depends_on = ["ytp-yield-wbtc-79760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-79760"]
-
-[contracts.multisig-crp-wbtc-59760-usda]
-path = "contracts/multisig/multisig-crp-wbtc-59760-usda.clar"
-depends_on = ["yield-wbtc-59760", "key-wbtc-59760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
-
-[contracts.multisig-crp-wbtc-79760-usda]
-path = "contracts/multisig/multisig-crp-wbtc-79760-usda.clar"
-depends_on = ["yield-wbtc-79760", "key-wbtc-79760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
