--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -160,3 +160,19 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 [contracts.ytp-yield-wbtc-79760-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc-79760-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contract.multisig-fwp-usda-23040-usda-74880-50-50]
+path = "contracts/multisig/multisig-fwp-usda-23040-usda-74880-50-50.clar"
+depends_on = ["yield-usda-23040", "yield-usda-74880", "fwp-usda-23040-usda-74880", "trait-yield-token", "trait-sip-010", "yield-token-pool"]
+
+[contract.fwp-usda-23040-usda-74880-50-50]
+path = "contracts/pool-token/fwp-usda-23040-usda-74880-50-50.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.yield-usda-23040]
+path = "contracts/yield-token/yield-usda-23040.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
+
+[contracts.yield-usda-74880]
+path = "contracts/yield-token/yield-usda-74880.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
