--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -23,7 +23,7 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-po
 
 [contracts.flash-loan-user-margin-usda-wbtc-59760]
 path = "contracts/flash-loan-user-margin-usda-wbtc-59760.clar"
-depends_on = ["token-usda", "token-wbtc", "yield-wbtc-59760", "key-wbtc-59760-usda"]
+depends_on = ["token-usda", "token-wbtc", "yield-wbtc-59760", "key-wbtc-59760-usda", "trait-sip-010"]
 
 [contracts.fwp-wbtc-usda-50-50]
 path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
@@ -103,7 +103,7 @@ depends_on = ["trait-pool-token", "trait-ownable"]
 
 [contracts.trait-flash-loan-user]
 path = "contracts/traits/trait-flash-loan-user.clar"
-depends_on = []
+depends_on = ["trait-sip-010"]
 
 [contracts.trait-multisig-vote]
 path = "contracts/traits/trait-multisig-vote.clar"
@@ -176,3 +176,23 @@ depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable
 [contracts.yield-usda-74880]
 path = "contracts/yield-token/yield-usda-74880.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
+
+[contracts.flash-loan-user-margin-wbtc-usda-23040]
+path = "contracts/flash-loan-user-margin-wbtc-usda-23040.clar"
+depends_on = ["token-usda", "token-wbtc", "yield-usda-23040", "key-usda-23040-wbtc", "trait-sip-010"]
+
+[contracts.key-usda-23040-wbtc]
+path = "contracts/key-token/key-usda-23040-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.ytp-yield-usda-23040-usda]
+path = "contracts/pool-token/ytp-yield-usda-23040-usda.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.multisig-ytp-yield-usda-23040-usda]
+path = "contracts/multisig/multisig-ytp-yield-usda-23040-usda.clar"
+depends_on = ["ytp-yield-usda-23040-usda", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-usda-23040"]
+
+[contracts.multisig-crp-usda-23040-wbtc]
+path = "contracts/multisig/multisig-crp-usda-23040-wbtc.clar"
+depends_on = ["yield-usda-23040", "key-usda-23040-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
