--- a/clarity/settings/Devnet.toml
+++ b/clarity/settings/Devnet.toml
@@ -85,7 +85,7 @@ disable_bitcoin_explorer = true
 # bitcoin_node_username = "devnet"
 # bitcoin_node_password = "devnet"
 # bitcoin_controller_port = 18442
-# bitcoin_controller_block_time = 10_000
+# bitcoin_controller_block_time = 100
 # stacks_node_rpc_port = 20443
 # stacks_node_p2p_port = 20444
 # stacks_api_port = 3999
