--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -113,6 +113,10 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-l
 path = "contracts/yield-token/yield-wbtc-59760.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
 
+[contracts.yield-usda-59760]
+path = "contracts/yield-token/yield-usda-59760.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
+
 [contracts.multisig-ytp-yield-wbtc-59760-wbtc]
 path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
 depends_on = ["ytp-yield-wbtc-59760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-59760"]
