--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -13,6 +13,10 @@ depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fix
 path = "contracts/pool/collateral-rebalancing-pool.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
 
+[contracts.collateral-rebalancing-pool-yt]
+path = "contracts/pool/collateral-rebalancing-pool-yt.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool-yt", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
+
 [contracts.faucet]
 path = "contracts/faucet.clar"
 depends_on = ["token-wbtc", "token-usda"]
@@ -21,8 +25,40 @@ depends_on = ["token-wbtc", "token-usda"]
 path = "contracts/pool/fixed-weight-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "trait-multisig-vote"]
 
+[contracts.fixed-weight-pool-yt]
+path = "contracts/pool/fixed-weight-pool-yt.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "trait-multisig-vote"]
+
+[contracts.flash-loan-user-margin-usda-wbtc-59760]
+path = "contracts/flash-loan-user-margin-usda-wbtc-59760.clar"
+depends_on = ["token-usda", "token-wbtc", "yield-wbtc-59760", "key-wbtc-59760-usda", "trait-sip-010"]
+
+[contracts.flash-loan-user-margin-wbtc-usda-23040]
+path = "contracts/flash-loan-user-margin-wbtc-usda-23040.clar"
+depends_on = ["token-usda", "token-wbtc", "yield-usda-23040", "key-usda-23040-wbtc", "trait-sip-010"]
+
 [contracts.fwp-wbtc-usda-50-50]
 path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.key-usda-23040-wbtc]
+path = "contracts/key-token/key-usda-23040-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.key-wbtc-59760-usda]
+path = "contracts/key-token/key-wbtc-59760-usda.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.key-wbtc-59760-wbtc]
+path = "contracts/key-token/key-wbtc-59760-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.key-wbtc-79760-usda]
+path = "contracts/key-token/key-wbtc-79760-usda.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.lbp-alex-usda-90-10]
+path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 
 [contracts.liquidity-bootstrapping-pool]
@@ -45,9 +81,41 @@ depends_on = ["math-new-log-exp"]
 path = "contracts/new-lib/math-new-log-exp.clar"
 depends_on = []
 
+[contracts.multisig-crp-usda-23040-wbtc]
+path = "contracts/multisig/multisig-crp-usda-23040-wbtc.clar"
+depends_on = ["yield-usda-23040", "key-usda-23040-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
+
+[contracts.multisig-crp-wbtc-59760-usda]
+path = "contracts/multisig/multisig-crp-wbtc-59760-usda.clar"
+depends_on = ["yield-wbtc-59760", "key-wbtc-59760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
+
+[contracts.multisig-crp-wbtc-59760-wbtc]
+path = "contracts/multisig/multisig-crp-wbtc-59760-wbtc.clar"
+depends_on = ["yield-wbtc-59760", "key-wbtc-59760-wbtc", "token-wbtc", "trait-sip-010"]
+
+[contracts.multisig-crp-wbtc-79760-usda]
+path = "contracts/multisig/multisig-crp-wbtc-79760-usda.clar"
+depends_on = ["yield-wbtc-79760", "key-wbtc-79760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
+
 [contracts.multisig-fwp-wbtc-usda-50-50]
 path = "contracts/multisig/multisig-fwp-wbtc-usda-50-50.clar"
 depends_on = []
+
+[contracts.multisig-lbp-alex-usda-90-10]
+path = "contracts/multisig/multisig-lbp-alex-usda-90-10.clar"
+depends_on = []
+
+[contracts.multisig-ytp-yield-usda-23040-usda]
+path = "contracts/multisig/multisig-ytp-yield-usda-23040-usda.clar"
+depends_on = ["ytp-yield-usda-23040-usda", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-usda-23040"]
+
+[contracts.multisig-ytp-yield-wbtc-59760-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
+depends_on = ["ytp-yield-wbtc-59760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-59760"]
+
+[contracts.multisig-ytp-yield-wbtc-79760-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc-79760-wbtc.clar"
+depends_on = ["ytp-yield-wbtc-79760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-79760"]
 
 [contracts.token-alex]
 path = "contracts/token/token-alex.clar"
@@ -105,90 +173,30 @@ depends_on = ["math-fixed-point"]
 path = "contracts/pool/yield-token-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token", "token-alex", "token-usda", "fixed-weight-pool", "alex-reserve-pool", "trait-multisig-vote"]
 
-[contracts.yield-wbtc-59760]
-path = "contracts/yield-token/yield-wbtc-59760.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+[contracts.yield-usda-23040]
+path = "contracts/yield-token/yield-usda-23040.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
 
 [contracts.yield-usda-59760]
 path = "contracts/yield-token/yield-usda-59760.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
 
-[contracts.multisig-ytp-yield-wbtc-59760-wbtc]
-path = "contracts/multisig/multisig-ytp-yield-wbtc-59760-wbtc.clar"
-depends_on = ["ytp-yield-wbtc-59760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-59760"]
-
-[contracts.flash-loan-user-margin-usda-wbtc-59760]
-path = "contracts/flash-loan-user-margin-usda-wbtc-59760.clar"
-depends_on = ["token-usda", "token-wbtc", "yield-wbtc-59760", "key-wbtc-59760-usda", "trait-sip-010"]
-
-[contracts.multisig-crp-wbtc-59760-usda]
-path = "contracts/multisig/multisig-crp-wbtc-59760-usda.clar"
-depends_on = ["yield-wbtc-59760", "key-wbtc-59760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
-
-[contracts.multisig-crp-wbtc-59760-wbtc]
-path = "contracts/multisig/multisig-crp-wbtc-59760-wbtc.clar"
-depends_on = ["yield-wbtc-59760", "key-wbtc-59760-wbtc", "token-wbtc", "trait-sip-010"]
-
-[contracts.key-wbtc-59760-usda]
-path = "contracts/key-token/key-wbtc-59760-usda.clar"
+[contracts.yield-wbtc-59760]
+path = "contracts/yield-token/yield-wbtc-59760.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
-
-[contracts.key-wbtc-59760-wbtc]
-path = "contracts/key-token/key-wbtc-59760-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
-
-[contracts.ytp-yield-wbtc-59760-wbtc]
-path = "contracts/pool-token/ytp-yield-wbtc-59760-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
-
-[contracts.multisig-crp-wbtc-79760-usda]
-path = "contracts/multisig/multisig-crp-wbtc-79760-usda.clar"
-depends_on = ["yield-wbtc-79760", "key-wbtc-79760-usda", "token-wbtc", "token-usda", "trait-sip-010"]
 
 [contracts.yield-wbtc-79760]
 path = "contracts/yield-token/yield-wbtc-79760.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
-
-[contracts.multisig-ytp-yield-wbtc-79760-wbtc]
-path = "contracts/multisig/multisig-ytp-yield-wbtc-79760-wbtc.clar"
-depends_on = ["ytp-yield-wbtc-79760-wbtc", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-wbtc-79760"]
-
-[contracts.key-wbtc-79760-usda]
-path = "contracts/key-token/key-wbtc-79760-usda.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
-
-[contracts.ytp-yield-wbtc-79760-wbtc]
-path = "contracts/pool-token/ytp-yield-wbtc-79760-wbtc.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
-
-[contracts.yield-usda-23040]
-path = "contracts/yield-token/yield-usda-23040.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
-
-[contracts.flash-loan-user-margin-wbtc-usda-23040]
-path = "contracts/flash-loan-user-margin-wbtc-usda-23040.clar"
-depends_on = ["token-usda", "token-wbtc", "yield-usda-23040", "key-usda-23040-wbtc", "trait-sip-010"]
-
-[contracts.key-usda-23040-wbtc]
-path = "contracts/key-token/key-usda-23040-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
 
 [contracts.ytp-yield-usda-23040-usda]
 path = "contracts/pool-token/ytp-yield-usda-23040-usda.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 
-[contracts.multisig-ytp-yield-usda-23040-usda]
-path = "contracts/multisig/multisig-ytp-yield-usda-23040-usda.clar"
-depends_on = ["ytp-yield-usda-23040-usda", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-usda-23040"]
-
-[contracts.multisig-crp-usda-23040-wbtc]
-path = "contracts/multisig/multisig-crp-usda-23040-wbtc.clar"
-depends_on = ["yield-usda-23040", "key-usda-23040-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
-
-[contracts.lbp-alex-usda-90-10]
-path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
+[contracts.ytp-yield-wbtc-59760-wbtc]
+path = "contracts/pool-token/ytp-yield-wbtc-59760-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
 
-[contracts.multisig-lbp-alex-usda-90-10]
-path = "contracts/multisig/multisig-lbp-alex-usda-90-10.clar"
-depends_on = []
+[contracts.ytp-yield-wbtc-79760-wbtc]
+path = "contracts/pool-token/ytp-yield-wbtc-79760-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
