--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,6 +1,11 @@
 [project]
 name = "alex-v1"
 requirements = []
+
+[contracts.margin-helper]
+path = "contracts/margin-helper.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "trait-flash-loan-user"]
+
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
 depends_on = ["token-alex", "token-usda", "math-fixed-point", "trait-ownable", "trait-sip-010", "alex-vault"]
@@ -212,3 +217,27 @@ depends_on = ["ytp-yield-wbtc-80875-wbtc", "trait-yield-token", "trait-sip-010",
 [contracts.ytp-yield-wbtc-80875-wbtc]
 path = "contracts/pool-token/ytp-yield-wbtc-80875-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.yield-usda-51840]
+path = "contracts/yield-token/yield-usda-51840.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda", "trait-ownable"]
+
+[contracts.flash-loan-user-margin-wbtc-usda-51840]
+path = "contracts/flash-loan-user-margin-wbtc-usda-51840.clar"
+depends_on = ["token-usda", "token-wbtc", "yield-usda-51840", "key-usda-51840-wbtc", "trait-sip-010"]
+
+[contracts.key-usda-51840-wbtc]
+path = "contracts/key-token/key-usda-51840-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-wbtc", "trait-ownable"]
+
+[contracts.ytp-yield-usda-51840-usda]
+path = "contracts/pool-token/ytp-yield-usda-51840-usda.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+
+[contracts.multisig-ytp-yield-usda-51840-usda]
+path = "contracts/multisig/multisig-ytp-yield-usda-51840-usda.clar"
+depends_on = ["ytp-yield-usda-51840-usda", "trait-yield-token", "trait-sip-010", "yield-token-pool", "yield-usda-51840"]
+
+[contracts.multisig-crp-usda-51840-wbtc]
+path = "contracts/multisig/multisig-crp-usda-51840-wbtc.clar"
+depends_on = ["yield-usda-51840", "key-usda-51840-wbtc", "token-wbtc", "token-usda", "trait-sip-010"]
