--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -8,7 +8,7 @@ depends_on = []
 
 [contracts.margin-helper]
 path = "contracts/margin-helper.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "trait-flash-loan-user"]
+depends_on = ["trait-sip-010", "trait-flash-loan-user"]
 
 [contracts.alex-reserve-pool]
 path = "contracts/pool/alex-reserve-pool.clar"
@@ -20,7 +20,7 @@ depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fix
 
 [contracts.collateral-rebalancing-pool]
 path = "contracts/pool/collateral-rebalancing-pool.clar"
-depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
+depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "fixed-weight-pool", "token-usda", "token-alex", "alex-reserve-pool", "yield-token-pool"]
 
 [contracts.faucet]
 path = "contracts/faucet.clar"
@@ -28,11 +28,11 @@ depends_on = ["token-wbtc", "token-usda", "token-t-alex", "token-wstx"]
 
 [contracts.fixed-weight-pool]
 path = "contracts/pool/fixed-weight-pool.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "trait-multisig-vote"]
+depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "trait-multisig-vote"]
 
 [contracts.liquidity-bootstrapping-pool]
 path = "contracts/pool/liquidity-bootstrapping-pool.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "fixed-weight-pool", "trait-multisig-vote"]
+depends_on = ["trait-sip-010", "trait-vault", "math-fixed-point", "weighted-equation", "token-alex", "alex-reserve-pool", "token-usda", "fixed-weight-pool", "trait-multisig-vote"]
 
 [contracts.math-fixed-point]
 path = "contracts/lib/math-fixed-point.clar"
@@ -52,23 +52,23 @@ depends_on = []
 
 [contracts.token-alex]
 path = "contracts/token/token-alex.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
+depends_on = ["trait-ownable", "trait-sip-010"]
 
 [contracts.token-t-alex]
 path = "contracts/token/token-t-alex.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
+depends_on = ["trait-ownable", "trait-sip-010"]
 
 [contracts.token-usda]
 path = "contracts/token/token-usda.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
+depends_on = ["trait-ownable", "trait-sip-010"]
 
 [contracts.token-wbtc]
 path = "contracts/token/token-wbtc.clar"
-depends_on = ["trait-pool-token", "trait-ownable"]
+depends_on = ["trait-ownable", "trait-sip-010"]
 
 [contracts.token-wstx]
 path = "contracts/token/token-wstx.clar"
-depends_on = ["trait-pool-token", "trait-ownable", "alex-vault"]
+depends_on = ["trait-ownable", "alex-vault", "trait-sip-010"]
 
 [contracts.trait-flash-loan-user]
 path = "contracts/traits/trait-flash-loan-user.clar"
@@ -86,10 +86,6 @@ depends_on = []
 path = "contracts/traits/trait-ownable.clar"
 depends_on = []
 
-[contracts.trait-pool-token]
-path = "contracts/traits/trait-pool-token.clar"
-depends_on = []
-
 [contracts.trait-sip-010]
 path = "contracts/traits/trait-sip-010.clar"
 depends_on = []
@@ -97,10 +93,6 @@ depends_on = []
 [contracts.trait-vault]
 path = "contracts/traits/trait-vault.clar"
 depends_on = ["trait-sip-010", "trait-flash-loan-user"]
-
-[contracts.trait-yield-token]
-path = "contracts/traits/trait-yield-token.clar"
-depends_on = []
 
 [contracts.weighted-equation]
 path = "contracts/equations/weighted-equation.clar"
@@ -116,11 +108,11 @@ depends_on = ["trait-sip-010", "trait-vault", "trait-flash-loan-user", "math-fix
 
 [contracts.fwp-wbtc-usda-50-50]
 path = "contracts/pool-token/fwp-wbtc-usda-50-50.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+depends_on = ["trait-sip-010", "trait-ownable"]
 
 [contracts.lbp-alex-usda-90-10]
 path = "contracts/pool-token/lbp-alex-usda-90-10.clar"
-depends_on = ["trait-sip-010", "trait-pool-token", "trait-ownable"]
+depends_on = ["trait-sip-010", "trait-ownable"]
 
 [contracts.ytp-yield-usda]
 path = "contracts/pool-token/ytp-yield-usda.clar"
@@ -140,7 +132,7 @@ depends_on = ["yield-usda", "key-usda-wbtc"]
 
 [contracts.multisig-ytp-yield-usda]
 path = "contracts/multisig/multisig-ytp-yield-usda.clar"
-depends_on = ["ytp-yield-usda"]
+depends_on = ["ytp-yield-usda", "yield-usda"]
 
 [contracts.key-usda-wbtc]
 path = "contracts/key-token/key-usda-wbtc.clar"
@@ -148,4 +140,16 @@ depends_on = ["trait-ownable", "trait-semi-fungible-token"]
 
 [contracts.yield-usda]
 path = "contracts/yield-token/yield-usda.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.yield-wbtc]
+path = "contracts/yield-token/yield-wbtc.clar"
+depends_on = ["trait-ownable", "trait-semi-fungible-token"]
+
+[contracts.multisig-ytp-yield-wbtc]
+path = "contracts/multisig/multisig-ytp-yield-wbtc.clar"
+depends_on = ["ytp-yield-wbtc", "yield-wbtc"]
+
+[contracts.ytp-yield-wbtc]
+path = "contracts/pool-token/ytp-yield-wbtc.clar"
 depends_on = ["trait-ownable", "trait-semi-fungible-token"]
