--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -14,9 +14,9 @@ depends_on = ["trait-sip-010", "trait-flash-loan-user"]
 path = "contracts/pool/alex-reserve-pool.clar"
 depends_on = ["trait-ownable", "trait-sip-010", "alex-vault"]
 
-[contracts.stacking-pool]
-path = "contracts/pool/stacking-pool.clar"
-depends_on = ["trait-ownable", "trait-sip-010", "trait-semi-fungible-token", "trait-multisig-vote"]
+[contracts.alex-futures-pool]
+path = "contracts/pool/alex-futures-pool.clar"
+depends_on = ["trait-ownable", "token-alex", "trait-semi-fungible-token", "trait-multisig-vote", "alex-reserve-pool"]
 
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
